--- a/chapter_3_forward_propagation.ipynb
+++ b/chapter_3_forward_propagation.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "chapter-3-forward-propagation.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOSs87AEy99ewnQNbPvTBmz",
+      "authorship_tag": "ABX9TyOAP0jzEfHcq5Fa8xK8+E5s",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,12 +31,34 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "EKR8f_A5D4OL"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "EKR8f_A5D4OL",
+        "outputId": "93dc275e-ae62-47cc-9c4e-c84e36aa84ef"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0.8500000000000001\n"
+          ]
+        }
+      ],
       "source": [
         "import numpy as np \n",
-        "\n"
+        "\n",
+        "weight = 0.1\n",
+        "\n",
+        "def neural_network(input, weight):\n",
+        "    prediction = input * weight \n",
+        "    return prediction \n",
+        "\n",
+        "number_of_toes = [8.5, 9.5, 10, 9]\n",
+        "input = number_of_toes[0]\n",
+        "pred = neural_network(input,weight)\n",
+        "print(pred)"
       ]
     }
   ]
