--- a/chapter_4_gradient_descent.ipynb
+++ b/chapter_4_gradient_descent.ipynb
@@ -6,7 +6,7 @@
       "name": "chapter-4-gradient-descent.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNvX5q3j2IAEMyEfn+IYdgT",
+      "authorship_tag": "ABX9TyN34cR1q20ebDfisZJDVn4V",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -62,9 +62,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "sQLNCL4rQNSE",
-        "outputId": "ba0d144d-69d5-40cd-bb77-fe2e9b15b5a0"
+        "outputId": "0c096f70-1de6-496a-c8e3-9ebd5dbe129d"
       },
-      "execution_count": 11,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -90,12 +90,14 @@
       "cell_type": "code",
       "source": [
         "epochs = 1101\n",
+        "steps = [0.001, 0.002, 0.003, 0.004]\n",
+        "errors = {\"0.001\": [], \"0.002\": [], \"0.003\": [], \"0.004\": []}\n",
         "\n",
-        "def neural_network(step_amount):\n",
+        "for step_amount in steps: \n",
+        "    \n",
         "    weight = 0.5\n",
         "    input = 0.5\n",
         "    goal_prediction = 0.8\n",
-        "\n",
         "    err = []\n",
         "\n",
         "    for iteration in range(epochs): \n",
@@ -105,26 +107,17 @@
         "        err.append(error)\n",
         "        if iteration == epochs:\n",
         "            print(f\"Error: {error} Prediction: {prediction}\")\n",
-        "\n",
         "        up_prediction = input * (weight + step_amount)\n",
         "        up_error = (goal_prediction - up_prediction) ** 2\n",
-        "\n",
         "        down_prediction = input * (weight - step_amount)\n",
         "        down_error = (goal_prediction - down_prediction) ** 2\n",
-        "\n",
         "        if (down_error < up_error):\n",
         "            weight = weight - step_amount\n",
-        "        \n",
         "        if (down_error > up_error):\n",
         "            weight = weight + step_amount\n",
         "\n",
-        "    return err \n",
+        "    errors[str(step_amount)] = err\n",
         "\n",
-        "steps = [0.001, 0.002, 0.003, 0.004]\n",
-        "errors = {\"0.001\": [], \"0.002\": [], \"0.003\": [], \"0.004\": []}\n",
-        "\n",
-        "for step in steps: \n",
-        "    errors[str(step)] = neural_network(step)\n",
         "\n",
         "import matplotlib.pyplot as plt\n",
         "\n",
@@ -143,9 +136,9 @@
           "height": 382
         },
         "id": "-e_Xmyt7JqAK",
-        "outputId": "9473c425-7f31-4382-c5f8-5b237aaa9790"
+        "outputId": "5b705750-fa83-4952-d715-cbc828463858"
       },
-      "execution_count": 18,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -161,11 +154,11 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.legend.Legend at 0x7f71a4a107d0>"
+              "<matplotlib.legend.Legend at 0x7f1d97973350>"
             ]
           },
           "metadata": {},
-          "execution_count": 18
+          "execution_count": 2
         },
         {
           "output_type": "display_data",
@@ -205,34 +198,25 @@
       "cell_type": "code",
       "source": [
         "epochs = 20\n",
+        "weight = 0.5\n",
+        "input = 0.5\n",
+        "goal_prediction = 0.8\n",
+        "errors = []\n",
         "\n",
-        "def neural_network():\n",
-        "    weight = 0.5\n",
-        "    input = 0.5\n",
-        "    goal_prediction = 0.8\n",
+        "for iteration in range(epochs): \n",
         "\n",
-        "    err = []\n",
-        "\n",
-        "    for iteration in range(epochs): \n",
-        "\n",
-        "        prediction = input * weight \n",
-        "        error = (prediction - goal_prediction) ** 2 \n",
-        "        # Scaling, negative reversal, and stopping.\n",
-        "        direction_and_amount = (prediction - goal_prediction) * input \n",
-        "        weight = weight - direction_and_amount\n",
-        "        \n",
-        "        err.append(error)\n",
-        "        if iteration == epochs:\n",
-        "            print(f\"Error: {error} Prediction: {prediction}\")\n",
-        "\n",
-        "\n",
-        "    return err \n",
-        " \n",
-        "error = neural_network()\n",
+        "    prediction = input * weight \n",
+        "    error = (prediction - goal_prediction) ** 2 \n",
+        "    # Scaling, negative reversal, and stopping.\n",
+        "    direction_and_amount = (prediction - goal_prediction) * input \n",
+        "    weight = weight - direction_and_amount\n",
+        "    errors.append(error)\n",
+        "    if iteration == epochs - 1:\n",
+        "        print(f\"Error: {error} Prediction: {prediction}\")\n",
         "\n",
         "import matplotlib.pyplot as plt\n",
         "\n",
-        "plt.plot(error)\n",
+        "plt.plot(errors)\n",
         "plt.title(\"Mean Squared Error (MSE)\")\n",
         "plt.xlabel(\"Epoch\")\n",
         "plt.ylabel(\"Error\")\n",
@@ -241,29 +225,36 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 330
+          "height": 347
         },
         "id": "JynlDATaPyq_",
-        "outputId": "9b226c17-0206-4c69-8c89-b51172b59579"
+        "outputId": "2073b95d-b4c8-4784-d453-a090b3684d27"
       },
-      "execution_count": 23,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "WARNING:matplotlib.legend:No handles with labels found to put in legend.\n"
+            "No handles with labels found to put in legend.\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Error: 5.408208020258491e-06 Prediction: 0.7976744445781151\n"
           ]
         },
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.legend.Legend at 0x7f71a4997e90>"
+              "<matplotlib.legend.Legend at 0x7f1d974122d0>"
             ]
           },
           "metadata": {},
-          "execution_count": 23
+          "execution_count": 3
         },
         {
           "output_type": "display_data",
@@ -324,19 +315,19 @@
           "height": 312
         },
         "id": "TwXm915xWbNw",
-        "outputId": "786e3a0b-b540-4788-d333-894a2635a2ea"
+        "outputId": "213efcb1-ab9a-4727-9c54-e108c77dd06c"
       },
-      "execution_count": 57,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.legend.Legend at 0x7f719ae413d0>"
+              "<matplotlib.legend.Legend at 0x7f1d973fae50>"
             ]
           },
           "metadata": {},
-          "execution_count": 57
+          "execution_count": 4
         },
         {
           "output_type": "display_data",
