--- a/chapter_5_generalizing_gradient_descent.ipynb
+++ b/chapter_5_generalizing_gradient_descent.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNNGjwkX+qXrsJAOjdfzcaW",
+      "authorship_tag": "ABX9TyOyLK/lFNvkSXo8JTW1guU7",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1098,15 +1098,24 @@
         "epochs = 2000 #@param {type: \"Float\"} {allow-input: true}\n",
         "size = 100 #@param {type: \"Float\"} {allow-input: true}\n",
         "\n",
+        "# Load the MNIST dataset.\n",
         "(X_train, y_train), (X_test, y_test) = mnist.load_data()\n",
+        "# Take first size instances from each set.\n",
         "X_train, X_test = X_train[:size], X_test[:size]\n",
         "y_train, y_test = y_train[:size], y_test[:size]\n",
+        "# Flatten each image into 1x784 vectors.\n",
         "X_train, X_test = [np.concatenate(i) for i in X_train], [np.concatenate(i) for i in X_test]\n",
         "input_dim, output_dim = 784, 10\n",
         "\n",
         "def onehot_encoding(labels):\n",
-        "    \"\"\" Encodes the class labels as onehot encoded vectors.\"\"\"\n",
-        "    n, m = len(labels), len(np.unique(labels))\n",
+        "    \"\"\" Encodes the class labels as onehot encoded vectors.\n",
+        "    \n",
+        "    Args: \n",
+        "        labels ([int]): categorical encoding.\n",
+        "\n",
+        "    Returns:\n",
+        "        onehot ([[int]]): list of onehot encoded output vector.\n",
+        "    \"\"\"\n",
         "    out = np.zeros((input_dim, output_dim))\n",
         "    for idx, label in enumerate(labels): \n",
         "        out[idx][label - 1] = 1\n",
@@ -1114,12 +1123,27 @@
         "  \n",
         "\n",
         "def normalize(inputs):\n",
-        "    \"\"\" Normalize pixel inputs between 0 and 1.\"\"\"\n",
+        "    \"\"\" Normalize pixel inputs between 0 and 1.\n",
+        "    \n",
+        "    Args: \n",
+        "        input ([float]): image as 1 x784 vector in raw pixel [0,255].\n",
+        "\n",
+        "    Returns\n",
+        "        output ([float]): an image as 1x784 vector normazlied [0,1].\n",
+        "    \"\"\"\n",
         "    return np.array(inputs)/255\n",
         "\n",
         "\n",
         "def neural_network(input, weights):\n",
-        "    \"\"\" Make a prediction, the dot product of the input and weights.\"\"\"\n",
+        "    \"\"\" Make a prediction, the dot product of the input and weights.\n",
+        "    \n",
+        "    Args:\n",
+        "        input ([float]): an image as 1 x784 vector. \n",
+        "        weights ([[float]]) a weights matrix of shape (10,784).\n",
+        "\n",
+        "    Returns: \n",
+        "        prediction ([float]) the dot product of the input and weights.\n",
+        "    \"\"\"\n",
         "    return weights.dot(input)\n",
         "\n",
         "\n",
@@ -1132,6 +1156,7 @@
         "errors = []\n",
         "val_errors = []\n",
         "\n",
+        "# Fit the network for a given number of training epochs.\n",
         "for epoch in range(epochs): \n",
         "    error_sum = 0\n",
         "    val_error_sum = 0\n",
@@ -1144,7 +1169,7 @@
         "        error = sum((preds - label) ** 2)\n",
         "        # Pure error.\n",
         "        deltas = preds - label\n",
-        "        # Multiply each delta by the input.\n",
+        "        # Calculate weight update. Multiply each delta by the input.\n",
         "        weight_deltas = np.array([ image * delta for delta in deltas ])\n",
         "        # Apply weight update scaled by learning rate.\n",
         "        weights -= weight_deltas * alpha\n",
@@ -1219,6 +1244,32 @@
           "metadata": {
             "needs_background": "light"
           }
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "weights.shape"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "RBk7Z5Lo-QGd",
+        "outputId": "2bf51339-5bf8-4cbc-c184-a0ce0c75ae19"
+      },
+      "execution_count": 92,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(10, 784)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 92
         }
       ]
     }
