--- a/chapter_6_building_your_first_deep_neural_network.ipynb
+++ b/chapter_6_building_your_first_deep_neural_network.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMmDMoAZMonWaE1Ks80EfpA",
+      "authorship_tag": "ABX9TyNHs++AMLF6eKQjgDuAZFjp",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -89,12 +89,12 @@
         "epochs = 60\n",
         "\n",
         "layers = []\n",
-        "first = 2 * np.random.random((input_dim, hidden_size)) - 1\n",
-        "second = 2 * np.random.random((hidden_size, output_dim)) - 1\n",
+        "input_layer = 2 * np.random.random((input_dim, hidden_size)) - 1\n",
+        "output_layer = 2 * np.random.random((hidden_size, output_dim)) - 1\n",
         "hidden = [(2 * np.random.random((hidden_size, hidden_size)) - 1) for _ in range(num_hidden)]\n",
-        "layers.append(first)\n",
+        "layers.append(input_layer)\n",
         "layers.extend(hidden)\n",
-        "layers.append(second)\n",
+        "layers.append(output_layer)\n",
         "\n",
         "predictions = None\n",
         "\n",
