--- a/chapter_6_building_your_first_deep_neural_network.ipynb
+++ b/chapter_6_building_your_first_deep_neural_network.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNHs++AMLF6eKQjgDuAZFjp",
+      "authorship_tag": "ABX9TyOcGL2K6762zmeRrz5D/uka",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,14 +27,23 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# Chapter 6 - Building your first deep neural network"
+      ],
+      "metadata": {
+        "id": "I7kEyDi-BuVB"
+      }
+    },
+    {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 7,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "lGFojE6v_Hql",
-        "outputId": "e4f15793-176e-484e-e37b-f355e6620657"
+        "outputId": "455e500e-7c66-49f2-d10f-6efb7de42bff"
       },
       "outputs": [
         {
@@ -54,18 +63,40 @@
       "source": [
         "import numpy as np\n",
         "\n",
+        "# Freeze the seed for reproducibility\n",
         "np.random.seed(1)\n",
         "\n",
         "def relu(x):\n",
+        "    \"\"\" ReLU activation function.\n",
+        "\n",
+        "    Args:\n",
+        "      x (tensor): input\n",
+        "\n",
+        "    Returns:\n",
+        "      tensor: ReLU activation function.\n",
+        "\n",
+        "    References:\n",
+        "      1. Nair, V., & Hinton, G. E. (2010).\n",
+        "         Rectified linear units improve restricted boltzmann machines.\n",
+        "         In Proceedings of the 27th international conference on\n",
+        "         machine learning (ICML-10) (pp. 807-814).\n",
+        "    \"\"\"\n",
         "    return (x > 0) * x\n",
         "\n",
         "def relu2deriv(output):\n",
+        "    \"\"\" Derivative of ReLU activation function.\n",
+        "\n",
+        "    Args:\n",
+        "      output (tensor): input\n",
+        "\n",
+        "    Returns:\n",
+        "      tensor: derivative of the ReLU activation function.\n",
+        "    \"\"\"\n",
         "    return output > 0\n",
         "\n",
+        "# Create the dataset.\n",
         "dataset = \"traffic\"\n",
-        "\n",
         "X, y = None, None\n",
-        "\n",
         "if dataset == \"XOR\":\n",
         "    X = np.array([[0,0],\n",
         "              [0,1],\n",
@@ -81,6 +112,7 @@
         "\n",
         "    y = np.array([[1,1,0,0]]).T\n",
         "\n",
+        "# Hyperparameters\n",
         "alpha = 0.2\n",
         "input_dim = X.shape[1]\n",
         "hidden_size = 4\n",
@@ -88,6 +120,7 @@
         "output_dim = y.shape[1]\n",
         "epochs = 60\n",
         "\n",
+        "# Intialize the deep neural network.\n",
         "layers = []\n",
         "input_layer = 2 * np.random.random((input_dim, hidden_size)) - 1\n",
         "output_layer = 2 * np.random.random((hidden_size, output_dim)) - 1\n",
@@ -98,6 +131,7 @@
         "\n",
         "predictions = None\n",
         "\n",
+        "# Training loop\n",
         "for iteration in range(epochs):\n",
         "    loss = 0\n",
         "    predictions = []\n",
@@ -131,6 +165,7 @@
         "        for i in reversed(range(len(deltas) - 1)):\n",
         "            layers[i] -= alpha * layer[i].T.dot(deltas[i+1])\n",
         "\n",
+        "    # Telemetry data from training.\n",
         "    if (iteration % 10 == 9):\n",
         "        print(f\"Error: {loss}\")\n",
         "\n",
